--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9a8092">  <td>24/06/10 07:41:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.AudioPostPageTest@54bff557]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2034182655</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>24/06/10 07:41:43</td>   <td>2625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AudioPostPageTest.dragAndDropAudio()[pri:0, instance:tests.AudioPostPageTest@54bff557]">dragAndDropAudio</td> 
-  <td>main@2034182655</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>24/06/10 07:41:56</td>   <td>15784</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.AudioPostPageTest@54bff557]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2034182655</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>24/06/10 19:29:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.ActionClassExample2@593aaf41]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
+<tr bgcolor="d68fcd">  <td>24/06/10 19:29:22</td>   <td>-6163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ActionClassExample2.sendKeysExample2()[pri:0, instance:tests.ActionClassExample2@593aaf41]">sendKeysExample2</td> 
+  <td>main@65586123</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>24/06/10 19:29:17</td>   <td>-10676</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.ActionClassExample2@593aaf41]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
 </table>
