--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d68fcd">  <td>24/06/10 19:29:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ActionClassExample2.sendKeysExample2()[pri:0, instance:tests.ActionClassExample2@593aaf41]">sendKeysExample2</td> 
-  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>24/06/10 19:29:17</td>   <td>-4513</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.ActionClassExample2@593aaf41]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>24/06/10 19:29:28</td>   <td>6163</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.ActionClassExample2@593aaf41]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
+<tr bgcolor="d68fcd">  <td>24/06/10 20:30:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ScrollExample.scrollDownAndTop()[pri:0, instance:tests.ScrollExample@5a56cdac]">scrollDownAndTop</td> 
+  <td>main@1446983876</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>24/06/10 20:30:03</td>   <td>-3738</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.ScrollExample@5a56cdac]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1446983876</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>24/06/10 20:30:19</td>   <td>12096</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.ScrollExample@5a56cdac]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1446983876</td>   <td></td> </tr>
 </table>
