--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d68fcd">  <td>24/06/18 17:57:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DropDown2.selectByValueIndex()[pri:0, instance:tests.DropDown2@54bff557]">selectByValueIndex</td> 
+<tr bgcolor="d68fcd">  <td>24/06/19 10:48:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JavaScriptExecutorHomework.homeworkJS()[pri:0, instance:tests.JavaScriptExecutorHomework@54bff557]">homeworkJS</td> 
   <td>main@2034182655</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>24/06/18 17:57:42</td>   <td>-3454</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.DropDown2@54bff557]">&gt;&gt;setup</td> 
+<tr bgcolor="9a8092">  <td>24/06/19 10:48:04</td>   <td>-4648</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.JavaScriptExecutorHomework@54bff557]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2034182655</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>24/06/18 17:57:47</td>   <td>1428</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.DropDown2@54bff557]">&lt;&lt;tearDown</td> 
+<tr bgcolor="9a8092">  <td>24/06/19 10:48:24</td>   <td>16145</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.JavaScriptExecutorHomework@54bff557]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2034182655</td>   <td></td> </tr>
 </table>
