--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite1</th></tr>
-<tr><td><a href="#t0">test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">27.495</td><td></td><td></td></tr>
+<tr><td><a href="#t0">test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">24.606</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">tests.DataProviderClassHome</td><td><a href="#m0">searchAndAssertBookCategories</a></td><td rowspan="4">1719474154890</td><td rowspan="4">4759</td></tr><tr class="passedeven"><td><a href="#m1">searchAndAssertBookCategories</a></td></tr><tr class="passedeven"><td><a href="#m2">searchAndAssertBookCategories</a></td></tr><tr class="passedeven"><td><a href="#m3">searchAndAssertBookCategories</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">tests.CookiesLogin</td><td><a href="#m0">cookieLogin</a></td><td rowspan="1">1719508727794</td><td rowspan="1">5081</td></tr><tr class="passedeven"><td><a href="#m1">validLoginTest</a></td><td rowspan="1">1719508718047</td><td rowspan="1">647</td></tr></tbody>
 </table>
-<h2>test</h2><h3 id="m0">tests.DataProviderClassHome#searchAndAssertBookCategories</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>https://keybooks.ro/shop/a-banquet-of-mouse/</td><td>Romans</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.DataProviderClassHome#searchAndAssertBookCategories</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>https://keybooks.ro/shop/lonely-man-in-white-hat/</td><td>Romans</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">tests.DataProviderClassHome#searchAndAssertBookCategories</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>https://keybooks.ro/shop/life-in-the-garden/</td><td>Romans</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">tests.DataProviderClassHome#searchAndAssertBookCategories</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>https://keybooks.ro/shop/the-son/</td><td>Romans</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>test</h2><h3 id="m0">tests.CookiesLogin#cookieLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.CookiesLogin#validLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
