--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,22 +104,12 @@
                     <div class="method-list-content passed suite-Suite1">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite1" title="tests.DataProviderClassHome" class="method navigator-link" hash-for-method="searchAndAssertBookCategories(https://keybooks.ro/shop/a-banquet-of-mouse/, Romans)">searchAndAssertBookCategories(https://keybooks.ro/shop/a-banquet-of-mouse/, Romans)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite1" title="tests.CookiesLogin" class="method navigator-link" hash-for-method="cookieLogin">cookieLogin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite1" title="tests.DataProviderClassHome" class="method navigator-link" hash-for-method="searchAndAssertBookCategories(https://keybooks.ro/shop/lonely-man-in-white-hat/, Romans)">searchAndAssertBookCategories(https://keybooks.ro/shop/lonely-man-in-white-hat/, Romans)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite1" title="tests.DataProviderClassHome" class="method navigator-link" hash-for-method="searchAndAssertBookCategories(https://keybooks.ro/shop/life-in-the-garden/, Romans)">searchAndAssertBookCategories(https://keybooks.ro/shop/life-in-the-garden/, Romans)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite1" title="tests.DataProviderClassHome" class="method navigator-link" hash-for-method="searchAndAssertBookCategories(https://keybooks.ro/shop/the-son/, Romans)">searchAndAssertBookCategories(https://keybooks.ro/shop/the-son/, Romans)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite1" title="tests.CookiesLogin" class="method navigator-link" hash-for-method="validLoginTest">validLoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite1 -->
@@ -137,39 +127,21 @@
           <div class="suite-Suite1-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.DataProviderClassHome</span>
+              <span class="class-name">tests.CookiesLogin</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="searchAndAssertBookCategories(https://keybooks.ro/shop/a-banquet-of-mouse/, Romans)">
-                  </a> <!-- searchAndAssertBookCategories(https://keybooks.ro/shop/a-banquet-of-mouse/, Romans) -->
-                  <span class="method-name">searchAndAssertBookCategories</span>
-                  <span class="parameters">(https://keybooks.ro/shop/a-banquet-of-mouse/, Romans)</span>
+                  <a name="cookieLogin">
+                  </a> <!-- cookieLogin -->
+                  <span class="method-name">cookieLogin</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="searchAndAssertBookCategories(https://keybooks.ro/shop/lonely-man-in-white-hat/, Romans)">
-                  </a> <!-- searchAndAssertBookCategories(https://keybooks.ro/shop/lonely-man-in-white-hat/, Romans) -->
-                  <span class="method-name">searchAndAssertBookCategories</span>
-                  <span class="parameters">(https://keybooks.ro/shop/lonely-man-in-white-hat/, Romans)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="searchAndAssertBookCategories(https://keybooks.ro/shop/life-in-the-garden/, Romans)">
-                  </a> <!-- searchAndAssertBookCategories(https://keybooks.ro/shop/life-in-the-garden/, Romans) -->
-                  <span class="method-name">searchAndAssertBookCategories</span>
-                  <span class="parameters">(https://keybooks.ro/shop/life-in-the-garden/, Romans)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="searchAndAssertBookCategories(https://keybooks.ro/shop/the-son/, Romans)">
-                  </a> <!-- searchAndAssertBookCategories(https://keybooks.ro/shop/the-son/, Romans) -->
-                  <span class="method-name">searchAndAssertBookCategories</span>
-                  <span class="parameters">(https://keybooks.ro/shop/the-son/, Romans)</span>
+                  <a name="validLoginTest">
+                  </a> <!-- validLoginTest -->
+                  <span class="method-name">validLoginTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -187,7 +159,7 @@
   &lt;parameter name=&quot;appUrl&quot; value=&quot;https://keybooks.ro&quot;/&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.DataProviderClassHome&quot;/&gt;
+      &lt;class name=&quot;tests.CookiesLogin&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- test --&gt;
 &lt;/suite&gt; &lt;!-- Suite1 --&gt;
@@ -227,28 +199,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'searchAndAssertBookCategories')
-data.setCell(0, 2, 'tests.DataProviderClassHome')
-data.setCell(0, 3, 4759);
+data.setCell(0, 1, 'cookieLogin')
+data.setCell(0, 2, 'tests.CookiesLogin')
+data.setCell(0, 3, 5081);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'searchAndAssertBookCategories')
-data.setCell(1, 2, 'tests.DataProviderClassHome')
-data.setCell(1, 3, 4527);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'searchAndAssertBookCategories')
-data.setCell(2, 2, 'tests.DataProviderClassHome')
-data.setCell(2, 3, 4511);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'searchAndAssertBookCategories')
-data.setCell(3, 2, 'tests.DataProviderClassHome')
-data.setCell(3, 3, 4452);
+data.setCell(1, 1, 'validLoginTest')
+data.setCell(1, 2, 'tests.CookiesLogin')
+data.setCell(1, 3, 647);
 window.suiteTableData['Suite1']= { tableData: data, tableDiv: 'times-div-Suite1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Suite1">
               </div> <!-- times-div-Suite1 -->
             </div> <!-- times-div -->
@@ -274,47 +238,39 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.DataProviderClassHome</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
+              <div class="chronological-class-name">tests.CookiesLogin</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
                 <span class="method-name">setup(https://keybooks.ro)</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">searchAndAssertBookCategories(https://keybooks.ro/shop/a-banquet-of-mouse/, Romans)</span>
-                <span class="method-start">4039 ms</span>
+                <span class="method-name">validLoginTest</span>
+                <span class="method-start">4566 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">recordFailure([TestResult name=searchAndAssertBookCategories status=SUCCESS method=DataProviderClassHome.searchAnd...)</span>
-                <span class="method-start">8800 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">searchAndAssertBookCategories(https://keybooks.ro/shop/life-in-the-garden/, Romans)</span>
-                <span class="method-start">8801 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">searchAndAssertBookCategories(https://keybooks.ro/shop/lonely-man-in-white-hat/, Romans)</span>
-                <span class="method-start">13254 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">recordFailure([TestResult name=searchAndAssertBookCategories status=SUCCESS method=DataProviderClassHome.searchAnd...)</span>
-                <span class="method-start">13254 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">searchAndAssertBookCategories(https://keybooks.ro/shop/the-son/, Romans)</span>
-                <span class="method-start">17782 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">recordFailure([TestResult name=searchAndAssertBookCategories status=SUCCESS method=DataProviderClassHome.searchAnd...)</span>
-                <span class="method-start">17782 ms</span>
+                <span class="method-name">recordFailure([TestResult name=validLoginTest status=SUCCESS method=CookiesLogin.validLoginTest()[pri:1, instance:...)</span>
+                <span class="method-start">5215 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method after">
-                <span class="method-name">recordFailure([TestResult name=searchAndAssertBookCategories status=SUCCESS method=DataProviderClassHome.searchAnd...)</span>
-                <span class="method-start">22294 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">22295 ms</span>
-              </div> <!-- configuration-class after -->
+                <span class="method-start">5217 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup(https://keybooks.ro)</span>
+                <span class="method-start">10399 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">cookieLogin</span>
+                <span class="method-start">14313 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">19395 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method after">
+                <span class="method-name">recordFailure([TestResult name=cookieLogin status=SUCCESS method=CookiesLogin.cookieLogin()[pri:2, instance:tests....)</span>
+                <span class="method-start">19395 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
