--- a/test-output/old/Suite1/classes.html
+++ b/test-output/old/Suite1/classes.html
@@ -4,25 +4,29 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.DataProviderClassHome</td>
+<td>tests.CookiesLogin</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>searchAndAssertBookCategories</td>
+<td>validLoginTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>cookieLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
 <td>&nbsp;</td>
 <td>setup</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
@@ -31,10 +35,10 @@
 <td>recordFailure</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
 <td>&nbsp;</td>
 <td>tearDown</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
 </table>
